Changelog
=========

1.1.3 (unreleased)
------------------

- Social media buttons: Removed unnecessary margin. Refs #16289
  [reinhardt]
- Adjusted background colours. Refs #16175
  [reinhardt]
- Hide login/register links. Refs #16221
  [reinhardt]
- Homepage View: Override review languages. Refs #16527
  [reinhardt]


1.1.2 (2018-01-18)
------------------

- Added social media buttons. Refs #16159
  [reinhardt]


1.1.1 (2017-11-16)
------------------

- Added logo, favicon and postit images. Refs #15426
  [reinhardt]
- Added custom logo link that points to navigation root. Refs #15816
  [reinhardt]


1.1.0 (2017-09-21)
------------------

- Blank boxes instead of language codes on home page. Refs #15426
  [reinhardt]
- Custom footer. Refs #15426
  [reinhardt]
- Custom colors. Refs #15426
  [reinhardt]
- Make sure vocabularies are included. Refs #15448
  [reinhardt]


1.0.0 (2017-01-27)
------------------

- Initial release
