@@ -12,6 +12,8 @@ Changelog
   [reinhardt]
 - Homepage View: Override review languages. Refs #16527
   [reinhardt]
+- Custom PDF cover logo. Refs #16527
+  [reinhardt]
 
 
 1.1.2 (2018-01-18)
